apps/jewellery-catalogue/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jewellery-catalogue
  labels:
    name: jewellery-catalogue
