apps/jewellery-catalogue/base/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jewellery-catalogue-api
  labels:
    app: jewellery-catalogue-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jewellery-catalogue-api
  template:
    metadata:
      labels:
        app: jewellery-catalogue-api
    spec:
      containers:
        - name: jewellery-catalogue-api
          image: 192.168.68.54:31834/jewellery-catalogue-api:placeholder
          ports:
            - containerPort: 3001
