apps/jewellery-catalogue/base/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jewellery-catalogue-mongodb
  labels:
    app: jewellery-catalogue-mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jewellery-catalogue-mongodb
  template:
    metadata:
      labels:
        app: jewellery-catalogue-mongodb
    spec:
      containers:
        - name: jewellery-catalogue-mongodb
          image: mongodb/mongodb-community-server:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
      volumes:
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: jewellery-catalogue-mongodb-pvc
